--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "grunt-jstestdriver",
-  "description": "Grunt task for uniting testing using JS Test Driver.",
-  "version": "1.1.0",
-  "homepage": "https://github.com/rickyclegg/grunt-jstestdriver",
-  "author": {
-    "name": "Ricky Clegg",
-    "email": "me@rickyclegg.com",
-    "url": "http://rickyclegg.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/rickyclegg/grunt-jstestdriver.git"
-  },
-  "bugs": {
-    "url": "https://github.com/rickyclegg/grunt-jstestdriver/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/rickyclegg/grunt-jstestdriver/blob/master/LICENSE-MIT"
-    }
-  ],
-  "main": "grunt.js",
-  "bin": "bin/grunt-jstestdriver",
-  "engines": {
-    "node": "*"
-  },
-  "scripts": {
-    "install": "curl -o `pwd`/lib/jstestdriver.jar http://js-test-driver.googlecode.com/files/JsTestDriver-1.3.5.jar",
-    "test": "grunt test"
-  },
-  "devDependencies": {
-    "grunt": "~0.3.17",
-    "grunt-html": "~0.3.1"
-  },
-  "keywords": [
-    "gruntplugin",
-    "jstestdriver",
-    "tdd",
-    "unit testing",
-    "testing"
-  ]
+    "name": "grunt-jstestdriver",
+    "description": "Grunt task for uniting testing using JS Test Driver.",
+    "version": "1.1.3",
+    "homepage": "https://github.com/rickyclegg/grunt-jstestdriver",
+    "author": {
+        "name": "Ricky Clegg",
+        "email": "me@rickyclegg.com",
+        "url": "http://rickyclegg.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/rickyclegg/grunt-jstestdriver.git"
+    },
+    "bugs": {
+        "url": "https://github.com/rickyclegg/grunt-jstestdriver/issues"
+    },
+    "licenses": [
+        {
+            "type": "APACHE",
+            "url": "https://github.com/rickyclegg/grunt-jstestdriver/blob/master/LICENSE-APACHE"
+        }
+    ],
+    "main": "grunt.js",
+    "bin": "bin/grunt-jstestdriver",
+    "engines": {
+        "node": "*"
+    },
+    "scripts": {
+        "test": "grunt test"
+    },
+    "devDependencies": {
+        "grunt": "~0.3.17",
+        "grunt-html": "~0.3.1"
+    },
+    "readmeFilename": "README.md",
+    "keywords": [
+        "gruntplugin",
+        "jstestdriver",
+        "tdd",
+        "unit testing",
+        "testing"
+    ]
 }
